// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StyledInputFormikField With Zod schema automatically adds attributes from Zod schema 1`] = `
<div>
  <div>
    <div
      data-cy="InputField-myAttribute"
    >
      <div>
        <input
          border="1px solid"
          bordercolor="black.300"
          borderradius="4px"
          font-size="14px"
          id="input-myAttribute"
          lineheight="1.5"
          maxlength="100"
          minlength="10"
          name="myAttribute"
          px="3"
          py="2"
          required=""
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`StyledInputFormikField With Zod schema automatically adds attributes from Zod schema on nested field 1`] = `
<div>
  <div>
    <div
      data-cy="InputField-my.nested.attribute"
    >
      <div>
        <input
          border="1px solid"
          bordercolor="black.300"
          borderradius="4px"
          font-size="14px"
          id="input-my.nested.attribute"
          lineheight="1.5"
          maxlength="100"
          minlength="10"
          name="my.nested.attribute"
          px="3"
          py="2"
          required=""
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`StyledInputFormikField With Zod schema automatically adds attributes from Zod schema on nullable field 1`] = `
<div>
  <div>
    <div
      data-cy="InputField-myAttribute"
    >
      <div>
        <input
          border="1px solid"
          bordercolor="black.300"
          borderradius="4px"
          font-size="14px"
          id="input-myAttribute"
          lineheight="1.5"
          name="myAttribute"
          px="3"
          py="2"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`StyledInputFormikField With Zod schema automatically adds attributes from Zod schema on number field 1`] = `
<div>
  <div>
    <div
      data-cy="InputField-myAttribute"
    >
      <div>
        <input
          border="1px solid"
          bordercolor="black.300"
          borderradius="4px"
          font-size="14px"
          id="input-myAttribute"
          lineheight="1.5"
          max="100"
          min="10"
          name="myAttribute"
          px="3"
          py="2"
          required=""
          type="number"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`StyledInputFormikField With Zod schema automatically adds attributes from Zod schema on optional field 1`] = `
<div>
  <div>
    <div
      data-cy="InputField-myAttribute"
    >
      <div>
        <input
          border="1px solid"
          bordercolor="black.300"
          borderradius="4px"
          font-size="14px"
          id="input-myAttribute"
          lineheight="1.5"
          name="myAttribute"
          px="3"
          py="2"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`StyledInputFormikField renders default options 1`] = `
<div>
  <div>
    <div
      data-cy="InputField-myAttribute"
    >
      <div>
        <input
          border="1px solid"
          bordercolor="black.300"
          borderradius="4px"
          font-size="14px"
          id="input-myAttribute"
          lineheight="1.5"
          name="myAttribute"
          px="3"
          py="2"
        />
      </div>
    </div>
  </div>
</div>
`;
